# Rippa

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
extension/: background.js  content.js  manifest.json
extension-firefox/: background.js  content.js  popup.html
src/: index.html  main.js  preload.js  renderer.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/extension/: popup.html  popup.js
src/extension-firefox/: manifest.json  popup.js
src/renderer/: renderer.js
