[package]
name = "rippa"
version = "1.0.0"
description = "Muestra en Discord el anime que ves en animeav1.com"
authors = ["Vicemi"]
edition = "2021"

[lib]
name = "rippa_lib"
path = "src/main.rs"
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta" }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["api-all", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
discord-rich-presence = "0.2"
anyhow = "1.0"
once_cell = "1.19"
log = "0.4"
simple-logger = "4.0"