[package]
name = "rippa"
version = "1.0.0"
description = "Muestra en Discord el anime que ves en animeav1.com"
authors = ["Vicemi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
discord-rich-presence = "0.2"
anyhow = "1.0"
once_cell = "1.19"
log = "0.4"
simple_logger = "4.0"
futures-util = "0.3"
open = "5.0"
